
### New Dictionaries ### {#New_Dictionaries_v1.4}

* erlang-mode
* ada-mode

### Fixed Bugs ### {#Fixed_Bugs_v1.4}

* Rare completion frequency computation error
* Improve dictionary caching sterategy
* Fixed help-mode error ("help-setup-xref: Symbol's value as variable is void: help-xref-following")
* Fixed auto-complete couldn't use pos-tip on Windows

v1.3.1 Changes {#Changes_v1.3.1}
------------

### Fixed Bugs ### {#Fixed_Bugs_v1.3.1}

* Significant bug on css-mode

### Others ### {#Others_v1.3.1}

* Added COPYING files

v1.3 Changes {#Changes_v1.3}
------------

Major changes in v1.3.

### New Options ### {#New_Options_v1.3}

* [`ac-disable-faces`](manual.txt#ac-disable-faces)
* [`ac-show-menu-immediately-on-auto-complete`](manual.txt#ac-show-menu-immediately-on-auto-complete)
* [`ac-expand-on-auto-complete`](manual.txt#ac-expand-on-auto-complete)
* [`ac-use-menu-map`](manual.txt#ac-use-menu-map)

### New Sources ### {#New_Sources_v1.3}

* [`ac-source-semantic-raw`](manual.txt#ac-source-semantic-raw)
* [`ac-source-css-property`](manual.txt#ac-source-css-property)

### New Source Properties ### {#New_Source_Properties_v1.3}

* [`summary`](manual.txt#summary)
* [`available`](manual.txt#available)

### New Dictionaries ### {#New_Dictionaries_v1.3}

* tcl-mode
* scheme-mode

### Changed Behaviors ### {#Changed_Behaviors_v1.3}

* Scoring regarding to candidate length (sort by length)

### Fixed Bugs ### {#Fixed_Bugs_v1.3}

* Error on Emacs 22.1
* `flyspell-mode` confliction (`M-x flyspell-workaround`)

### Others ### {#Others_v1.3}

* Improved word completion performance (#18)
* Cooperate with [pos-tip.el](manual.txt#Show_help_beautifully)
* Yasnippet 0.61 support
* Fix many bugs

v1.2 Changes {#Changes_v1.2}
------------

Major changes in v1.2 since v1.0.

### New Features ### {#New_Features_v1.2}

* [Completion by Fuzzy Matching](manual.txt#Completion_by_Fuzzy_Matching)
* [Completion by Dictionary](manual.txt#Completion_by_Dictionary)